force-app/main/default/objects/Portfolio__c/fields/AboutMe__c.field-meta.xml
<CustomField>
    <fullName>AboutMe__c</fullName>
    <label>AboutMe</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>