force-app/main/default/objects/Portfolio__c/fields/CertificationData__c.field-meta.xml
<CustomField>
    <fullName>CertificationData__c</fullName>
    <label>CertificationData</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>