force-app/main/default/objects/Portfolio__c/fields/LinkedInProfile__c.field-meta.xml
<CustomField>
    <fullName>LinkedInProfile__c</fullName>
    <label>LinkedInProfile</label>
    <type>Url</type>
</CustomField>