force-app/main/default/objects/Portfolio__c/fields/ResumeURL__c.field-meta.xml
<CustomField>
    <fullName>ResumeURL__c</fullName>
    <label>ResumeURL</label>
    <type>Url</type>
</CustomField>