force-app/main/default/objects/Portfolio__c/fields/SalesforceStackoverflowProfile__c.field-meta.xml
<CustomField>
    <fullName>SalesforceStackoverflowProfile__c</fullName>
    <label>SalesforceStackoverflowProfile</label>
    <type>Url</type>
</CustomField>