force-app/main/default/objects/Portfolio__c/fields/StackoverflowData__c.field-meta.xml
<CustomField>
    <fullName>StackoverflowData__c</fullName>
    <label>StackoverflowData</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>