force-app/main/default/objects/Portfolio__c/fields/TrailheadProfileURL__c.field-meta.xml
<CustomField>
    <fullName>TrailheadProfileURL__c</fullName>
    <label>TrailheadProfileURL</label>
    <type>Url</type>
</CustomField>