force-app/main/default/objects/Portfolio__c/fields/WhatIAm__c.field-meta.xml
<CustomField>
    <fullName>WhatIAm__c</fullName>
    <label>WhatIAm</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Technical Architect</fullName>
            </value>
            <value>
                <fullName>Passionate Coder</fullName>
            </value>
            <value>
                <fullName>Web Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>